--- a/StarCraft2Calculator/App.config
+++ b/StarCraft2Calculator/App.config
@@ -6,6 +6,9 @@
         <add name="StarCraft2Calculator.Properties.Settings.Sc2CalcDatabaseConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Sc2CalcDatabase.mdb"
             providerName="System.Data.OleDb" />
+        <add name="StarCraft2Calculator.Properties.Settings.unitDataConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\unitData.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
